# lib/db/src/schema/index.ts
@@ -2,3 +2,5 @@ export * from "./subjects";
 export * from "./careers";
 export * from "./institutions";
 export * from "./routes";
+export * from "./conversations";
+export * from "./messages";
